# IRIS

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  mcp.json.example  plan.md  project.yml  setup.sh
IRIS/: AppDelegate.swift  IRIS.entitlements  IRISApp.swift  Info.plist
IRIS/AI/: AgentManager.swift  AgentMode.swift  ClaudeEngine.swift  ClaudeSessionManager.swift  ContextDigest.swift  IRISBrain.swift  IntentRouter.swift  LocalAnswers.swift  LocalBrain.swift  Router.swift  SidecarClient.swift  StreamJSON.swift
IRIS/Actions/: AppLauncher.swift  ComputerControl.swift  FolderOpener.swift  TerminalLauncher.swift  WebSearch.swift
IRIS/Config/: Settings.swift
IRIS/Core/: AgentTask.swift  CompanionManager.swift  Core.swift  CostGovernor.swift  HotkeyManager.swift  IRISLog.swift  Memory.swift  PermissionsManager.swift  Persona.swift  Skills.swift
IRIS/Realtime/: RealtimeAudio.swift  RealtimeSession.swift  RealtimeTools.swift
IRIS/UI/: FloatingPanel.swift  OnboardingView.swift  OverlayView.swift  PointerOverlay.swift  SettingsView.swift  StatusBarItem.swift
IRIS/Vision/: OpenAIVision.swift  ScreenCapture.swift  ScreenPointer.swift  ScreenRuleEngine.swift
IRIS/Voice/: OpenAITTS.swift  Speaker.swift  Transcriber.swift  VoiceProviders.swift  WakePhraseMatcher.swift  WakeWordDetector.swift
docs/: algorithms.md
scripts/: install-app.sh
sidecar/: .env.example  .gitignore  README.md  mcp_servers.json.example  pyproject.toml  setup.sh
sidecar/iris_agents/: __init__.py  agent.py  manager.py  mcp.py  models.py  server.py  tools.py
(+9 files in other folders)
