[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-agents"
version = "0.1.0"
description = "IRIS background-agent sidecar (LangGraph + FastAPI)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2.50",
    "langchain-mcp-adapters>=0.1",
    "duckduckgo-search>=6.3",
]

[project.scripts]
iris-agents = "iris_agents.server:main"

[tool.setuptools]
packages = ["iris_agents"]
